# rust-statsd-server

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  buildmusl
src/: backend.rs  buckets.rs  cli.rs  main.rs  management.rs  metric.rs  metric_processor.rs  server.rs
src/backend/: backend.rs  console.rs
src/backends/: console.rs  graphite.rs  statsd.rs
tests/: conftest.py  test_console.py  test_management.py
