[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[package]
name = "statsd"
version = "0.1.1"
authors = ["Mark Story <mark@mark-story.com>"]

[dependencies]
docopt = "^0.8"
serde_derive = "^1.0.8"
serde = "^1.0.8"
time = "^0.1"
tokio-core = "0.1.17"
futures = "0.1.20"
threadpool = "1.8.1"
